...

            Spacer()
        } actions: {
            Button("Cancel") {
                viewModel.cancelTool()
            }
            Button("Add Plane") {
                viewModel.commitTool()
            }
            .buttonStyle(.borderedProminent)
        }
    }

...
